--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ footer{
     }
 }
 
-@media screen and (max width: 768px){
+@media screen and (max-width: 768px){
     .container{
         width: 90%;
     }
